# Center_joballocation

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml  target.md  todo.md
.claude/: settings.local.json
data/: data_format_specification.md  sample_operators.csv  sample_tasks.csv  skillset_master.numbers  usage_guide.md
src/algorithms/: __init__.py  base.py  cp_sat.py  deferred_acceptance.py  genetic_algorithm.py  heuristic.py  linear_programming.py
src/data/: operator_loader.py  task_loader.py  validators.py
src/models/: __init__.py  operator.py  schedule.py  task.py
src/ui/: app.py  components.py  gantt_chart.py  visualization.py
src/utils/: export.py  metrics.py  scheduler.py
tests/: test_algorithms.py  test_data_loaders.py  test_scheduler.py
